    The former provides the main program file and the plugins while the latter
    provides the configuration. This allows for much more flexible setups
    (e.g. providing customizations on top of "collectd-core" without modifying
    the "collectd" package) and, amongst others, removes the hard dependency
    on librrd (Closes: #495936, #544311).

 -- Sebastian Harl <tokkee@debian.org>  Sun, 13 Dec 2009 20:54:52 +0100

collectd (4.8.1-2) unstable; urgency=low

  * debian/rules:
    - Disabled the "java" plugin on hppa for now to work around a backlog in
      the buildds that currently prevents a transition to testing.
  * debian/control:
    - Do not build-depend on openjdk-6-jdk on hppa.

 -- Sebastian Harl <tokkee@debian.org>  Thu, 19 Nov 2009 10:55:33 +0100

collectd (4.8.1-1) unstable; urgency=medium

  * New upstream release:
    - Fixed a build issue with libiptc that caused a segfault in the iptables
      plugin; thanks to Rodrigo Campos for reporting this (Closes: #535786).
    - Updated the powerdns plugin to support pdns 2.9.22 (and above) as well;
      thanks to Thomas Morgan for reporting this and Luke Heberling for
      providing a patch (Closes: #535787).
    New plugins:
    - Parse JSON files: curl_json
    - Query data from Java processes using JMX: GenericJMX (Java based plugin)
    - Atheros wireless LAN chipset statistics: madwifi
    - Optimized Link State Routing daemon statistics: olsrd
    - Tokyo Tyrant server statistics: tokyotyrant (disabled in Debian,
      libtokyotyrant is not available)
    - Send collected values to a web-server: write_http
    - ZFS Adaptive Replacement Cache statistics: zfs_arc (disabled in Debian,
      libkstat is not available)
    New matches:
    - Match zero COUNTER values: empty_counter
  * Set urgency to medium because of the fix for #535786.
  * debian/rules:
    - Install contrib/GenericJMX.conf to /usr/share/doc/collectd/examples/.